# pytorch-tutorial

./: .gitignore  Makefile  pyproject.toml
tutorials/01-basics/01-pytorch_basics/: 01-autograd1.py  01-example1.py  02-autograd2.py  03-from_numpy.py  03-input_pipeline.py  04-exercise1.py  04-input_pipeline.py  04-pretrained_model.py  05-exercise2.py  05-save-load-model.py  06-pretrained_model.py  07-save-load-model.py  README.md  main.py
tutorials/01-basics/02-linear_regression/: exercise.py  main.py  solution.py
tutorials/01-basics/03-logistic_regression/: exercise.py  main.py
tutorials/01-basics/04-feedforward_neural_network/: exercise.py  main.py
tutorials/02-intermediate/01-convolutional_neural_network/: exercise.py  solution.py
tutorials/02-intermediate/02-deep_residual_network/: main.py
tutorials/02-intermediate/05-language_model/: data_utils.py
tutorials/02-intermediate/bidirectional_recurrent_neural_network/: main.py
tutorials/02-intermediate/convolutional_neural_network/: main.py
tutorials/02-intermediate/deep_residual_network/: main.py
tutorials/02-intermediate/language_model/: main.py
tutorials/02-intermediate/recurrent_neural_network/: main.py
tutorials/03-advanced/generative_adversarial_network/: main.py
tutorials/03-advanced/image_captioning/: build_vocab.py  data_loader.py  resize.py  sample.py  train.py
tutorials/03-advanced/neural_style_transfer/: main.py
tutorials/03-advanced/variational_autoencoder/: main.py
tutorials/04-utils/tensorboard/: logger.py  main.py
